# rust-50-steps

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  setup.ps1
level1/01_fizzbuzz/: Cargo.toml  README.md
level1/02_guessing_game/: Cargo.toml  README.md
level1/03_cli_calculator/: Cargo.toml  README.md
level1/04_string_reverser/: Cargo.toml  README.md
level1/05_temp_converter/: Cargo.toml  README.md
level1/06_password_generator/: Cargo.toml  README.md
level1/07_multiplication_table/: Cargo.toml  README.md
level1/08_unit_converter/: Cargo.toml  README.md
level1/09_anagram_checker/: Cargo.toml
level1/10_dice_simulator/: Cargo.toml
level2/11_cli_todo/: Cargo.toml
level2/12_text_counter/: Cargo.toml
level2/13_csv_parser/: Cargo.toml
level2/14_cli_stopwatch/: Cargo.toml
level2/15_grade_calculator/: Cargo.toml
level2/16_bmi_logger/: Cargo.toml
level2/17_file_lister/: Cargo.toml
level2/18_calendar_cli/: Cargo.toml
level2/19_morse_converter/: Cargo.toml
level2/20_config_parser/: Cargo.toml
level3/21_weather_cli/: Cargo.toml
level3/22_json_formatter/: Cargo.toml
level3/23_base64_tool/: Cargo.toml
level3/24_grep_clone/: Cargo.toml
level3/25_port_scanner/: Cargo.toml
level3/26_pomodoro_timer/: Cargo.toml
level3/27_sqlite_address_book/: Cargo.toml
level3/28_url_shortener/: Cargo.toml
level3/29_web_scraper/: Cargo.toml
level3/30_snake_game/: Cargo.toml
level4/31_tcp_chat/: Cargo.toml
level4/32_http_api/: Cargo.toml
level4/33_tui_file_manager/: Cargo.toml
level4/34_parallel_resizer/: Cargo.toml
(+18 files in other folders)
