[workspace]
members = [
    "level1/*",
    "level2/*",
    "level3/*",
    "level4/*",
    "level5/*", 
    "model",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
rand = "0.10.1"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
